Modifed urls to work at mashwork.com/canvs

--- a/about/about-content.jade
+++ b/about/about-content.jade
@@ -2,33 +2,33 @@ div.about-content
   header.hero-header
     a.canvs-login(href="http://canvs.tv/login") Login
       span.login-icon
-        img(src="images/user-icon.svg")
+        img(src="../images/user-icon.svg")
     div.container
       div.hero-header-content
         div.branding-wrap
           p.logo-introducing Introducing
           a.canvs-logo-link(href="/")
-            img.canvs-logo(src="images/logos/canvs-logo-white.svg")
+            img.canvs-logo(src="../images/logos/canvs-logo-white.svg")
             div.powered-by-wrap
               span.powered-by powered by
-              img.mashwork-logo(src="images/logos/mashwork-logo-white-red.svg")
+              img.mashwork-logo(src="../images/logos/mashwork-logo-white-red.svg")
 
         h1.site-header Core Beliefs
 
       div.row
         div.content-box.core-beliefs-box.context
           div.icon-circle
-            img.core-beliefs-illustration(src="images/context-icon.svg")
+            img.core-beliefs-illustration(src="../images/context-icon.svg")
           h2 Context
           p Social marketers and researchers are no longer content simply counting mentions: social becomes a powerful insights tool only when we can understand the context of conversations.
         div.content-box.core-beliefs-box.emotion
           div.icon-circle
-            img.core-beliefs-illustration(src="images/emotion-icon.svg")
+            img.core-beliefs-illustration(src="../images/emotion-icon.svg")
           h2 Emotion
           p Canvs layers the emotional graph on top of the social graph to reveal context behind social conversations. We believe that understanding how audiences emotionally relate to content is the first step in building a meaningful relationship with them. 
         div.content-box.core-beliefs-box.nuance
           div.icon-circle
-            img.core-beliefs-illustration(src="images/nuance-icon.svg")
+            img.core-beliefs-illustration(src="../images/nuance-icon.svg")
           h2 Nuance
           p Entertainment content is complex—that’s why we don’t believe in positive, negative, and neutral sentiment. Canvs uncovers nuanced audience emotions and lets you decide what they mean for your show.
 
@@ -41,12 +41,12 @@ div.about-content
             p.section-description Since 2010, Mashwork analysts have been delivering reports to the world’s top brands. Our observations led us to creating Canvs and assure us it’s a compelling tool. 
           div.row
             div.content-box.jared
-              img.canvs-origins-image(src="images/team/jared.jpg")
+              img.canvs-origins-image(src="../images/team/jared.jpg")
               h2 Jared Feldman
               h3 Founder &amp; CEO
 
             div.content-box.sam
-              img.canvs-origins-image(src="images/team/sam.jpg")
+              img.canvs-origins-image(src="../images/team/sam.jpg")
               h2 Sam Hui, PhD
               h3 Chief Scientist
 
@@ -61,17 +61,17 @@ div.about-content
         h1.section-header Advisors
       div.row
         div.content-box.stephen-gatfield
-          img.canvs-advisors-image(src="images/advisors/stephen-gatfield.jpg")
+          img.canvs-advisors-image(src="../images/advisors/stephen-gatfield.jpg")
           h2 Stephen Gatfield
           h3 Marcoms Strategist &amp; Investor
 
         div.content-box.michoel-ogince
-          img.canvs-advisors-image(src="images/advisors/michoel-ogince.jpg")
+          img.canvs-advisors-image(src="../images/advisors/michoel-ogince.jpg")
           h2 Michoel Ogince
           h3 Founding Partner at Windforce Ventures
 
         div.content-box.shaula-yemini
-          img.canvs-advisors-image(src="images/advisors/shaula-yemini.jpg")
+          img.canvs-advisors-image(src="../images/advisors/shaula-yemini.jpg")
           h2 Shaula Yemini, PhD
           h3 Technical Advisor
 
