--- a/footer.jade
+++ b/footer.jade
@@ -2,13 +2,13 @@ footer.page-footer
   ul.social-links
     li.twitter-link
       a(href="https://www.twitter.com/mashwork", target="_blank")
-        img.social-icon(src="images/twitter-icon.svg")
+        img.social-icon(src="http://www.mashwork.com/canvs/images/twitter-icon.svg")
     li.facebook-link
       a(href="https://www.facebook.com/mashwork", target="_blank")
-        img.social-icon(src="images/facebook-icon.svg")
+        img.social-icon(src="http://www.mashwork.com/canvs/images/facebook-icon.svg")
     li.linkedin-link
       a(href="https://www.linkedin.com/company/mashwork", target="_blank")
-        img.social-icon(src="images/linkedin-icon.svg")
+        img.social-icon(src="http://www.mashwork.com/canvs/images/linkedin-icon.svg")
 
   p.copyright 
     | &copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; 
@@ -19,9 +19,9 @@ footer.page-footer
     | • 
     a(href="tel:1-646-201-9124") 646-201-9124
     | • 
-    a(href="/about") About Us 
+    a(href="/canvs/about") About Us 
     | • 
     a(href="http://mashwork.com/blog") News
 
   a.made-in-ny(href="http://wearemadeinny.com/")
-    img(src="images/logos/made-in-ny-logo.svg")
+    img(src="http://www.mashwork.com/canvs/images/logos/made-in-ny-logo.svg")
