--- a/style/sass/_about.scss
+++ b/style/sass/_about.scss
@@ -2,7 +2,7 @@
 
   .hero-header {
     height: auto;
-    background: $offBlack url("/images/about-hero-image.jpg") no-repeat center center fixed;
+    background: $offBlack url("../../images/about-hero-image.jpg") no-repeat center center fixed;
     background-size: cover;
   }
 
