--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1717,7 +1717,7 @@ select[multiple].input-sm,
 
 .input-lg, .input-group-lg > .form-control,
 .input-group-lg > .input-group-addon,
-.input-group-lg > .input-group-btn > .btn {
+.input-group-lg > .input-group-btn > .btn, #canvsContactForm .form-control {
   height: 46px;
   padding: 10px 16px;
   font-size: 18px;
@@ -1726,17 +1726,18 @@ select[multiple].input-sm,
 
 select.input-lg, .input-group-lg > select.form-control,
 .input-group-lg > select.input-group-addon,
-.input-group-lg > .input-group-btn > select.btn {
+.input-group-lg > .input-group-btn > select.btn, #canvsContactForm select.form-control {
   height: 46px;
   line-height: 46px; }
 
 textarea.input-lg, .input-group-lg > textarea.form-control,
 .input-group-lg > textarea.input-group-addon,
-.input-group-lg > .input-group-btn > textarea.btn,
+.input-group-lg > .input-group-btn > textarea.btn, #canvsContactForm textarea.form-control,
 select[multiple].input-lg,
 .input-group-lg > select[multiple].form-control,
 .input-group-lg > select[multiple].input-group-addon,
-.input-group-lg > .input-group-btn > select[multiple].btn {
+.input-group-lg > .input-group-btn > select[multiple].btn,
+#canvsContactForm select[multiple].form-control {
   height: auto; }
 
 .has-feedback {
@@ -3078,7 +3079,7 @@ input[type="button"].btn-block {
     border-radius: 3px; }
   .input-group-addon.input-lg,
   .input-group-lg > .input-group-addon,
-  .input-group-lg > .input-group-btn > .input-group-addon.btn {
+  .input-group-lg > .input-group-btn > .input-group-addon.btn, #canvsContactForm .input-group-addon.form-control {
     padding: 10px 16px;
     font-size: 18px;
     border-radius: 6px; }
@@ -5128,6 +5129,73 @@ p.section-description {
     -webkit-box-shadow: inset 0 2px 2px #787878;
     box-shadow: inset 0 2px 2px #787878; }
 
+button:focus {
+  outline: none; }
+
+#canvsContactForm {
+  margin-bottom: 30px; }
+  #canvsContactForm .form-control {
+    border-radius: 0;
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    background-color: #c6c6c6;
+    font-weight: 300;
+    padding: 0 15px;
+    height: 45px;
+    line-height: 32px;
+    line-height: 3.2rem;
+    font-size: 21px;
+    font-size: 2.1rem;
+    color: #4b4b4b;
+    vertical-align: middle; }
+    #canvsContactForm .form-control::-webkit-input-placeholder {
+      font-weight: 300;
+      font-size: 21px;
+      font-size: 2.1rem;
+      line-height: 32px;
+      line-height: 3.2rem;
+      color: #777777; }
+    #canvsContactForm .form-control::-moz-placeholder {
+      font-weight: 300;
+      font-size: 21px;
+      font-size: 2.1rem;
+      line-height: 32px;
+      line-height: 3.2rem;
+      color: #777777; }
+    #canvsContactForm .form-control:-moz-placeholder {
+      font-weight: 300;
+      font-size: 21px;
+      font-size: 2.1rem;
+      line-height: 32px;
+      line-height: 3.2rem;
+      color: #777777; }
+    #canvsContactForm .form-control:-ms-input-placeholder {
+      font-weight: 300;
+      font-size: 21px;
+      font-size: 2.1rem;
+      line-height: 32px;
+      line-height: 3.2rem;
+      color: #777777; }
+    #canvsContactForm .form-control:focus {
+      background-color: white; }
+      #canvsContactForm .form-control:focus::-webkit-input-placeholder {
+        -webkit-transition: opacity 0.5s 0.5s ease;
+        transition: opacity 0.5s 0.5s ease;
+        opacity: 0; }
+      #canvsContactForm .form-control:focus::-moz-placeholder {
+        transition: opacity 0.5s 0.5s ease;
+        opacity: 0; }
+      #canvsContactForm .form-control:focus:-moz-placeholder {
+        transition: opacity 0.5s 0.5s ease;
+        opacity: 0; }
+      #canvsContactForm .form-control:focus:-ms-input-placeholder {
+        transition: opacity 0.5s 0.5s ease;
+        opacity: 0; }
+
+.canvsContactform-submit {
+  margin-top: 30px; }
+
 html {
   width: 100%;
   height: 100%; }
@@ -5470,9 +5538,54 @@ section, .section {
   border-radius: 0;
   background-color: #e8e8e8; }
 
-.modal-header {
+.modal .close {
+  z-index: 9000;
+  font-size: 36px;
+  font-size: 3.6rem;
+  line-height: 44px;
+  font-weight: 300;
+  text-shadow: none;
+  color: #777777;
+  opacity: 1;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background-color: #d1d1d1;
+  position: absolute;
+  top: 15px;
+  right: 15px; }
+  .modal .close:hover {
+    background-color: #bbbbbb;
+    color: #4b4b4b; }
+
+.modal-title {
+  line-height: 42px;
+  line-height: 4.2rem;
+  margin-bottom: 10px; }
+
+.modal-body {
   text-align: center;
-  border: none; }
+  height: 100%; }
+
+.modal-form-header {
+  margin-bottom: 20px; }
+
+.modal-center-wrap {
+  height: 500px;
+  position: relative;
+  top: 50%;
+  margin-top: -250px;
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px; }
+  @media (min-width: 768px) {
+    .modal-center-wrap {
+      float: left;
+      width: 66.6666666667%; } }
+  @media (min-width: 768px) {
+    .modal-center-wrap {
+      margin-left: 16.6666666667%; } }
 
 .modal-footer {
   text-align: center;
