--- a/app/style/style.css
+++ b/app/style/style.css
@@ -5057,10 +5057,6 @@ h1.section-header {
   padding: 0 15px;
   margin-bottom: 20px;
   color: #4b4b4b;
-  font-size: 36px;
-  font-size: 3.6rem;
-  line-height: 42px;
-  line-height: 4.2rem;
   letter-spacing: .5px; }
 
 h3 {
@@ -5091,6 +5087,12 @@ p.section-description {
   line-height: 36px;
   line-height: 3.6rem;
   margin-bottom: 20px; }
+  @media screen and (max-width: 479px) {
+    .content-box h2 {
+      font-size: 26px;
+      font-size: 2.6rem;
+      line-height: 32px;
+      line-height: 3.2rem; } }
 
 .btn-teal, .action-btn {
   display: inline-block;
@@ -5303,18 +5305,17 @@ section, .section {
   width: 100%;
   height: 100%;
   position: relative;
-  min-height: 480px;
+  min-height: 600px;
   text-align: center;
-  padding-bottom: 50px;
   background: #282828 url("../images/canvs-header-image-test.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   background-size: cover; }
   @media screen and (max-width: 479px) {
-    .hero-header .container {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      padding-top: 50px; } }
+    .hero-header {
+      min-height: 568px; } }
+  .hero-header .container {
+    width: 100%;
+    padding: 0 5px; }
 
 .canvs-login {
   position: absolute;
@@ -5366,7 +5367,12 @@ section, .section {
     .canvs-login {
       position: initial;
       display: inline-block;
-      padding-top: 5px; } }
+      margin: 10px 0;
+      margin-bottom: 20px;
+      padding: 0 10px;
+      background-color: rgba(255, 255, 255, 0.15);
+      height: 30px;
+      line-height: 30px; } }
 
 .hero-header-content {
   position: relative;
@@ -5753,6 +5759,9 @@ section, .section {
 .modal-footer {
   text-align: center;
   border: none; }
+
+.canvs-video {
+  display: none; }
 
 .featherlight .featherlight-content {
   width: 80%; }
