--- a/app/style/style.css
+++ b/app/style/style.css
@@ -5313,11 +5313,11 @@ section, .section {
   position: relative;
   min-height: 600px;
   text-align: center;
-  background: #282828 url("../images/canvs-header-image-test.jpg") no-repeat center center;
+  background: #282828 url("../images/canvs-header-image-test2.jpg") no-repeat center center;
   background-attachment: fixed;
   -webkit-background-size: cover;
   background-size: cover; }
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1024px) {
     .hero-header {
       background-attachment: scroll; } }
   @media screen and (max-width: 479px) {
@@ -5552,7 +5552,7 @@ section, .section {
 
 .actionable-insights-section {
   text-align: center;
-  background: #282828 url("../images/canvs-header-image-test.jpg") no-repeat center center fixed;
+  background: #282828 url("../images/canvs-header-image-test2.jpg") no-repeat center center fixed;
   background-attachment: fixed;
   -webkit-background-size: cover;
   background-size: cover; }
@@ -5774,32 +5774,70 @@ section, .section {
   text-align: center;
   border: none; }
 
-.canvs-video {
-  display: none; }
-
-.featherlight .featherlight-content {
-  width: 80%; }
-
-.featherlight .featherlight-close {
+.canvs-video-wrap-container {
   position: fixed;
-  top: 30px;
-  right: 30px;
-  width: 40px;
-  height: 40px;
-  line-height: 44px;
-  font-size: 28px;
-  font-size: 2.8rem;
+  width: 100%;
+  height: 100%;
+  padding: 10%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 9000;
+  display: none;
+  opacity: 0;
+  -webkit-transition: opacity .5s linear;
+  transition: opacity .5s linear; }
+  .canvs-video-wrap-container.active {
+    display: block;
+    opacity: 1; }
+
+.canvs-video-wrap {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+  margin-top: -25%;
+  /* video height / video width */
+  padding-bottom: 63%;
+  height: 0;
+  overflow: hidden; }
+  .canvs-video-wrap .canvs-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90%;
+    height: 100%;
+    left: 5%; }
+
+.canvs-video-close {
+  z-index: 9100;
+  text-align: center;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  font-size: 42px;
+  font-size: 4.2rem;
+  line-height: 50px;
   font-weight: 300;
-  border-radius: 100%;
-  background: rgba(255, 255, 255, 0.4);
   color: white;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  background-color: rgba(255, 255, 255, 0.3);
   -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transition: transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-  .featherlight .featherlight-close:hover {
-    background: rgba(255, 255, 255, 0.6);
+  .canvs-video-close:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
     -webkit-transform: scale(1.2);
     -ms-transform: scale(1.2);
     transform: scale(1.2); }
+  @media screen and (max-width: 479px) {
+    .canvs-video-close {
+      width: 40px;
+      height: 40px;
+      font-size: 36px;
+      font-size: 3.6rem;
+      line-height: 44px; } }
 
 .about-content .hero-header {
   height: auto;
@@ -5807,6 +5845,8 @@ section, .section {
   background: #282828 url("../images/about-hero-image.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   background-size: cover; }
+  .about-content .hero-header .container {
+    padding: 0 15px; }
   @media screen and (max-width: 479px) {
     .about-content .hero-header .container {
       position: relative;
@@ -5863,6 +5903,19 @@ section, .section {
       position: relative;
       margin: 0 auto;
       margin-top: 25px; }
+
+.core-beliefs-section {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px; }
+  @media (min-width: 992px) {
+    .core-beliefs-section {
+      float: left;
+      width: 66.6666666667%; } }
+  @media (min-width: 992px) {
+    .core-beliefs-section {
+      margin-left: 16.6666666667%; } }
 
 .core-beliefs-box.context .core-beliefs-illustration {
   width: 60px;
